--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html ng-app="custom-webapp-ui" lang="en">
+<html ng-app="custom-webapp-ui" lang="en" style="background-color: white">
   <head>
     <!-- Load the Telegram Library -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -14,6 +14,15 @@
                 { name: "meat", value: 5 },
                 { name: "dairy", value: 5 }
             ];
+        //initialize the button
+        const mainButton = window.Telegram.WebApp.MainButton;
+        mainButton.text = "Save Preferences";
+        mainButton.enable();
+        mainButton.show();
+        // and make it send the "foods" object (as JSON string) back to the bot
+        mainButton.onClick(function(){
+          window.Telegram.WebApp.sendData(JSON.stringify($scope.foods));
+        })
       });
     </script>
   </head>
