--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         mainButton.show();
         // and make it send the "foods" object (as JSON string) back to the bot
         mainButton.onClick(function(){
+            alert("hi")
           window.Telegram.WebApp.sendData(JSON.stringify($scope.foods));
         })
       });
@@ -33,3 +34,5 @@
     </div>
   </body>
 </html>
+
+
