--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         mainButton.show();
         // and make it send the "foods" object (as JSON string) back to the bot
         mainButton.onClick(function(){
-            alert("hi")
+            alert(JSON.stringify($scope.foods[0]))
           window.Telegram.WebApp.sendData(JSON.stringify($scope.foods));
         })
       });
