--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script>
       //initialize the AngularJS stuff...
       angular.module("custom-webapp-ui", []).controller('CustomUIController', function CustomUIController($scope) {
+        console.log(window.Telegram.WebApp);
+
         //init our slider values that we will display
         $scope.foods = [
                 { name: "fruits", value: 5 },
