--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         mainButton.show();
        
         mainButton.onClick(function(){
-          window.Telegram.WebApp.sendData(JSON.stringify($scope.foods));
+          window.Telegram.WebApp.setBackgroundColor("red");
         })
       });
     </script>
