--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         mainButton.show();
        
         mainButton.onClick(function(){
+          alert("hi')
           window.Telegram.WebApp.setBackgroundColor("red");
         })
       });
