--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         mainButton.show();
        
         mainButton.onClick(function(){
-          alert("hi')
+          alert("hi")
           window.Telegram.WebApp.setBackgroundColor("red");
         })
       });
