--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
    
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-    <script>
-
-     angular.module("custom-webapp-ui", []).controller('CustomUIController', function CustomUIController($scope) {
+   <script>
+  angular.module("custom-webapp-ui", []).controller('CustomUIController', function CustomUIController($scope) {
     console.log(window.Telegram.WebApp);
 
     $scope.foods = [
@@ -21,12 +20,21 @@
     mainButton.enable();
     mainButton.show();
 
-  mainButton.onClick(function() {
-      const preferences = JSON.stringify($scope.foods);  
-      window.Telegram.WebApp.sendData(preferences);      
+    mainButton.onClick(function() {
+        try {
+            const preferences = JSON.stringify($scope.foods); // Serialize data
+            window.Telegram.WebApp.sendData(preferences); // Send to bot
+        } catch (error) {
+            console.error("Error sending data:", error);
+        }
+    });
+
+    // Optionally, get data sent from bot during initialization
+    const initData = window.Telegram.WebApp.initData;
+    console.log("Received data from bot:", initData);
   });
-});
-    </script>
+</script>
+
   </head>
   <body ng-controller="CustomUIController">
     <div ng-repeat="food in foods">
